# mapping_field

./: .gitignore  LICENSE  README.md  field.py  logging_setup.py  main.py  mapping_field.py  pyproject.toml  requirements.txt  setup.py
mapping_field/: __init__.py  arithmetics.py  associative.py  binary_expansion.py  bool_vars.py  conditional_function.py  conditions.py  field.py  global_config.py  linear.py  mapping_field.py  math_utils.py  new_conditions.py  new_ranged_condition.py  processors.py  promises.py  property_engines.py  pytest.ini  ranged_condition.py  serializable.py  tree_loggers.py  validators.py
mapping_field/log_utils/: box_drawer.py  log_viewer.py  terminal_launcher.py  tree_loggers.py
mapping_field/new_code/: __init__.py  arithmetics.py  binary_expansion.py  conditional_function.py  conditions.py  linear.py  mapping_field.py  new_linear.py  new_ranged_condition.py  promises.py  ranged_condition.py  validators.py
mapping_field/new_tests/: binary_expansion_ranged_test.py  new_conditions_test.py  new_linear_test.py  new_ranged_condition_test.py
mapping_field/old_code/: __init__.py  arithmetics.py  binary_expansion.py  conditional_function.py  conditions.py  linear.py  mapping_field.py  ranged_condition.py
mapping_field/scripts/: format_code.py  sort_imports.py
mapping_field/tests/: arithmetic_test.py  arithmetics_test.py  binary_expansion_ranged_test.py  binary_expansion_test.py  bool_var_test.py  conditional_function_test.py  conditions_test.py  conftest.py  linear_test.py  mapping_field_test.py  promises_test.py  (+8 more)
tests/: mapping_field_test.py
(+27 files in other folders)
